[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Qanalysis"
version = "0.2.1"
authors = [
  { name="Eunjong Kim", email="ekim7206@gmail.com" },
]
description = "Toolbox for qubit measurement and analysis"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy>=1.9.0",
    "numpy>=1.23",
    "matplotlib>=3.5.2",
    "pandas>=1.4.0",
    "scikit-learn>=1.1.2",
    "seaborn>=0.12.0",
    "cma>=3.2.2"
]
[project.urls]
"Homepage" = "https://github.com/eunjongkim/Qanalysis"
"Bug Tracker" = "https://github.com/eunjongkim/Qanalysis/issues"
